--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="Deformable Neural Radiance Fields creates free-viewpoint portraits (nerfies) from casually captured videos.">
+        content="Skill Generalization With Verbs.">
   <meta name="keywords" content="Nerfies, D-NeRF, NeRF">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Skill Generalization With Verbs</title>
@@ -128,6 +128,7 @@
           <div class="column has-text-centered">
             <div class="publication-links">
               <!-- PDF Link. -->
+              <!--
               <span class="link-block">
                 <a href="https://arxiv.org/pdf/2011.12948"
                    class="external-link button is-normal is-rounded is-dark">
@@ -146,6 +147,7 @@
                   <span>arXiv</span>
                 </a>
               </span>
+              -->
               <!-- Video Link. -->
               <span class="link-block">
                 <a href="https://www.youtube.com/watch?v=MrKrnHhk8IA"
@@ -167,6 +169,7 @@
                   </a>
               </span>
               <!-- Dataset Link. -->
+              <!--
               <span class="link-block">
                 <a href="https://github.com/google/nerfies/releases/tag/0.1"
                    class="external-link button is-normal is-rounded is-dark">
@@ -175,6 +178,7 @@
                   </span>
                   <span>Data</span>
                   </a>
+                  -->
             </div>
 
           </div>
@@ -306,22 +310,25 @@
     <div class="columns is-centered">
 
       <!-- Visual Effects. -->
+      <!--
       <div class="column">
         <div class="content">
           <h2 class="title is-3">Visual Effects</h2>
-          <p>
-            Using <i>nerfies</i> you can create fun visual effects. This Dolly zoom effect
-            would be impossible without nerfies since it would require going through a wall.
-          </p>
           <video id="dollyzoom" autoplay controls muted loop playsinline height="100%">
             <source src="./static/videos/dollyzoom-stacked.mp4"
                     type="video/mp4">
           </video>
+          <p>
+            Using <i>nerfies</i> you can create fun visual effects. This Dolly zoom effect
+            would be impossible without nerfies since it would require going through a wall.
+          </p>
         </div>
       </div>
+      -->
       <!--/ Visual Effects. -->
 
       <!-- Matting. -->
+      <!--
       <div class="column">
         <h2 class="title is-3">Matting</h2>
         <div class="columns is-centered">
@@ -339,14 +346,17 @@
         </div>
       </div>
     </div>
+    -->
     <!--/ Matting. -->
 
     <!-- Animation. -->
+   
     <div class="columns is-centered">
       <div class="column is-full-width">
-        <h2 class="title is-3">Animation</h2>
+        <h2 class="title is-3">Experimental Results</h2>
 
         <!-- Interpolating. -->
+         <!--
         <h3 class="title is-4">Interpolating states</h3>
         <div class="content has-text-justified">
           <p>
@@ -378,9 +388,11 @@
           </div>
         </div>
         <br/>
+        -->
         <!--/ Interpolating. -->
 
         <!-- Re-rendering. -->
+        <!--
         <h3 class="title is-4">Re-rendering the input video</h3>
         <div class="content has-text-justified">
           <p>
@@ -399,6 +411,7 @@
                     type="video/mp4">
           </video>
         </div>
+        -->
         <!--/ Re-rendering. -->
 
       </div>
@@ -407,6 +420,7 @@
 
 
     <!-- Concurrent Work. -->
+    <!--
     <div class="columns is-centered">
       <div class="column is-full-width">
         <h2 class="title is-3">Related Links</h2>
@@ -431,6 +445,7 @@
         </div>
       </div>
     </div>
+    -->
     <!--/ Concurrent Work. -->
 
   </div>
@@ -440,12 +455,14 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
+    <!--
     <pre><code>@article{park2021nerfies,
   author    = {Park, Keunhong and Sinha, Utkarsh and Barron, Jonathan T. and Bouaziz, Sofien and Goldman, Dan B and Seitz, Steven M. and Martin-Brualla, Ricardo},
   title     = {Nerfies: Deformable Neural Radiance Fields},
   journal   = {ICCV},
   year      = {2021},
 }</code></pre>
+-->
   </div>
 </section>
 
@@ -465,16 +482,8 @@
       <div class="column is-8">
         <div class="content">
           <p>
-            This website is licensed under a <a rel="license"
-                                                href="http://creativecommons.org/licenses/by-sa/4.0/">Creative
-            Commons Attribution-ShareAlike 4.0 International License</a>.
-          </p>
-          <p>
-            This means you are free to borrow the <a
-              href="https://github.com/nerfies/nerfies.github.io">source code</a> of this website,
-            we just ask that you link back to this page in the footer.
-            Please remember to remove the analytics code included in the header of the website which
-            you do not want on your website.
+            Website template borrowed from <a href="https://github.com/nerfies/nerfies.github.io">NeRFies</a> 
+		  made by the amazing <a href="https://keunhong.com/">Keunhong Park</a>. 
           </p>
         </div>
       </div>
