--- a/index.html
+++ b/index.html
@@ -97,25 +97,25 @@
             <span class="author-block">
               Lyndon Lam<sup>2</sup>,</span>
             <span class="author-block">
-              <a href="https://jonbarron.info">Benjamin A. Spiegel</a><sup>1</sup>,
+              <a href="https://benjaminaspiegel.com/">Benjamin A. Spiegel</a><sup>1</sup>,
             </span>
             <span class="author-block">
-              <a href="http://sofienbouaziz.com">Aditya Ganeshan</a><sup>1</sup>,
+              <a href="https://bardofcodes.github.io">Aditya Ganeshan</a><sup>1</sup>,
             </span>
             <span class="author-block">
-              <a href="https://www.danbgoldman.com">Roma Patel</a><sup>3</sup>,
+              Roma Patel<sup>3</sup>,
             </span>
             <span class="author-block">
-              <a href="https://homes.cs.washington.edu/~seitz/">Ben Abbatematteo</a><sup>1</sup>,
+              <a href="https://babbatem.github.io">Ben Abbatematteo</a><sup>1</sup>,
             </span>
             <span class="author-block">
-              <a href="http://www.ricardomartinbrualla.com">David Paulius</a><sup>1</sup>
+              <a href="https://www.davidpaulius.me">David Paulius</a><sup>1</sup>
             </span>
             <span class="author-block">
-              <a href="http://www.ricardomartinbrualla.com">Stefanie Tellex</a><sup>1</sup>
+              <a href="https://cs.brown.edu/people/stellex/">Stefanie Tellex</a><sup>1</sup>
             </span>
             <span class="author-block">
-              <a href="http://www.ricardomartinbrualla.com">George Konidaris</a><sup>1</sup>
+              <a href="https://cs.brown.edu/people/gdk/">George Konidaris</a><sup>1</sup>
             </span>
           </div>
 
@@ -301,7 +301,21 @@
     </div>
     <!--/ Paper video. -->
   </div>
+
+  <div class="columns is-centered has-text-centered">
+    <div class="column is-four-fifths">
+      <h2 class="title is-3">Dataset</h2>
+      <div class="content has-text-justified">
+        <p>
+          Dataset generated and used for this paper is available upon request. Please contact the author at rma20@cs.brown.edu.
+          </p>
+      </div>
+    </div>
+  </div>
+  <!--/ Paper video. -->
+</div>
 </section>
+
 
 <!--
 <section class="section">
