--- a/index.html
+++ b/index.html
@@ -301,19 +301,22 @@
       </div>
     </div>
     <!--/ Paper video. -->
-  </div>
+  
 
   <div class="columns is-centered has-text-centered">
     <div class="column is-four-fifths">
       <h2 class="title is-3">Dataset</h2>
-      <div class="content has-text-justified">
         <p>
-          Dataset generated and used for this paper is available upon request. Please contact the author at rma20@cs.brown.edu.
+          Dataset generated and used for this paper is available upon request. 
+          <br>
+          Please contact the author at rma20@cs.brown.edu.
           </p>
       </div>
     </div>
-  </div>
+ 
   <!--/ Paper video. -->
+</div>
+</div>
 </div>
 </section>
 
