--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
               -->
               <!-- Video Link. -->
               <span class="link-block">
-                <a href="https://www.youtube.com/watch?v=MrKrnHhk8IA"
+                <a href="https://drive.google.com/file/d/190BkpdCgH1GwiWdJSeNBxw2f67Pa1eJb/preview"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-youtube"></i>
@@ -161,7 +161,7 @@
               </span>
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="https://github.com/google/nerfies"
+                <a href="https://github.com/rachelma80000/Skill_Generalization_With_Verbs"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
