--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
               <a href="https://babbatem.github.io">Ben Abbatematteo</a><sup>1</sup>,
             </span>
             <span class="author-block">
-              <a href="https://www.davidpaulius.me">David Paulius</a><sup>1</sup>
+              <a href="https://www.davidpaulius.me">David Paulius</a><sup>1</sup>,
             </span>
             <span class="author-block">
-              <a href="https://cs.brown.edu/people/stellex/">Stefanie Tellex</a><sup>1</sup>
+              <a href="https://cs.brown.edu/people/stellex/">Stefanie Tellex</a><sup>1</sup>,
             </span>
             <span class="author-block">
               <a href="https://cs.brown.edu/people/gdk/">George Konidaris</a><sup>1</sup>
