--- a/index.html
+++ b/index.html
@@ -296,7 +296,10 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Demonstration Video</h2>
-        <iframe src="https://drive.google.com/file/d/1Vvptnh8TlHpUt1nfMpcz5lRZTOJYd3uw/preview" width="640" height="480" allow="autoplay"></iframe>
+        <video poster="" id="demo_video" autoplay controls muted loop playsinline height="100%">
+          <source src="./static/videos/IROS_FINAL_VIDEO.mp4"
+                  type="video/mp4">
+        </video>
         </div>
       </div>
     </div>
