changed email address

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
         <p>
           Dataset generated and used for this paper is available upon request. 
           <br>
-          Please contact the author at rma20@cs.brown.edu.
+          Please contact the author at rachelm8@mit.edu.
           </p>
       </div>
     </div>
